--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           haxelib install hxCodec 2.5.1
           haxelib install actuate
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          hexelib run lime rebuild extension-webm linux
+          haxelib run lime rebuild extension-webm linux
           haxelib git linc_luajit https://github.com/AndreiRudenko/linc_luajit
           haxelib git hscript-yoshiengine https://github.com/YoshiCrafter29/hscript-improved
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
@@ -83,7 +83,7 @@ jobs:
           haxelib install hxCodec 2.5.1
           haxelib install actuate
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          hexelib run lime rebuild extension-webm windows
+          haxelib run lime rebuild extension-webm windows
           haxelib git linc_luajit https://github.com/AndreiRudenko/linc_luajit
           haxelib git hscript-yoshiengine https://github.com/YoshiCrafter29/hscript-improved 
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
@@ -126,7 +126,7 @@ jobs:
           haxelib install hxCodec 2.5.1
           haxelib install actuate
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          hexelib run lime rebuild extension-webm mac
+          haxelib run lime rebuild extension-webm mac
           haxelib git linc_luajit https://github.com/AndreiRudenko/linc_luajit
           haxelib git hscript-yoshiengine https://github.com/YoshiCrafter29/hscript-improved
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
